code/build/log/idf_py_stderr_output_43262
In file included from /Users/nickhardy/Documents/GitHub/Team1-Boujaoude-Deokar-Hijazi-Hardy/quest-1/code/main/solarcode2.c:6:
/Users/nickhardy/esp/esp-idf/components/driver/deprecated/driver/adc.h:19:2: warning: #warning "legacy adc driver is deprecated, please migrate to use esp_adc/adc_oneshot.h and esp_adc/adc_continuous.h for oneshot mode and continuous mode drivers respectively" [-Wcpp]
   19 | #warning "legacy adc driver is deprecated, please migrate to use esp_adc/adc_oneshot.h and esp_adc/adc_continuous.h for oneshot mode and continuous mode drivers respectively"
      |  ^~~~~~~
In file included from /Users/nickhardy/Documents/GitHub/Team1-Boujaoude-Deokar-Hijazi-Hardy/quest-1/code/main/solarcode2.c:8:
/Users/nickhardy/esp/esp-idf/components/esp_adc/deprecated/include/esp_adc_cal.h:17:2: warning: #warning "legacy adc calibration driver is deprecated, please migrate to use esp_adc/adc_cali.h and esp_adc/adc_cali_scheme.h" [-Wcpp]
   17 | #warning "legacy adc calibration driver is deprecated, please migrate to use esp_adc/adc_cali.h and esp_adc/adc_cali_scheme.h"
      |  ^~~~~~~
In file included from /Users/nickhardy/Documents/GitHub/Team1-Boujaoude-Deokar-Hijazi-Hardy/quest-1/code/main/solarcode2.c:25:
/Users/nickhardy/esp/esp-idf/components/driver/deprecated/driver/periph_ctrl.h:7:2: warning: #warning driver/periph_ctrl.h header is no longer used, and will be removed in future versions. [-Wcpp]
    7 | #warning driver/periph_ctrl.h header is no longer used, and will be removed in future versions.
      |  ^~~~~~~
/Users/nickhardy/Documents/GitHub/Team1-Boujaoude-Deokar-Hijazi-Hardy/quest-1/code/main/solarcode2.c: In function 'start_timer':
/Users/nickhardy/Documents/GitHub/Team1-Boujaoude-Deokar-Hijazi-Hardy/quest-1/code/main/solarcode2.c:382:23: error: 'queue' undeclared (first use in this function); did you mean 'sigqueue'?
  382 |     if (xQueueReceive(queue, &ele, pdMS_TO_TICKS(2000)))
      |                       ^~~~~
      |                       sigqueue
/Users/nickhardy/Documents/GitHub/Team1-Boujaoude-Deokar-Hijazi-Hardy/quest-1/code/main/solarcode2.c:382:23: note: each undeclared identifier is reported only once for each function it appears in
/Users/nickhardy/Documents/GitHub/Team1-Boujaoude-Deokar-Hijazi-Hardy/quest-1/code/main/solarcode2.c:382:31: error: 'ele' undeclared (first use in this function)
  382 |     if (xQueueReceive(queue, &ele, pdMS_TO_TICKS(2000)))
      |                               ^~~
/Users/nickhardy/Documents/GitHub/Team1-Boujaoude-Deokar-Hijazi-Hardy/quest-1/code/main/solarcode2.c: In function 'app_main':
/Users/nickhardy/Documents/GitHub/Team1-Boujaoude-Deokar-Hijazi-Hardy/quest-1/code/main/solarcode2.c:752:11: warning: unused variable 'final_azimuth_and_altitude' [-Wunused-variable]
  752 |       int final_azimuth_and_altitude = 1;
      |           ^~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/nickhardy/Documents/GitHub/Team1-Boujaoude-Deokar-Hijazi-Hardy/quest-1/code/main/solarcode2.c:793:14: warning: unused variable 'voltage' [-Wunused-variable]
  793 |     uint32_t voltage = esp_adc_cal_raw_to_voltage(adc_reading, adc_chars);
      |              ^~~~~~~
/Users/nickhardy/Documents/GitHub/Team1-Boujaoude-Deokar-Hijazi-Hardy/quest-1/code/main/solarcode2.c:596:7: warning: unused variable 'previous_voltage' [-Wunused-variable]
  596 |   int previous_voltage = 0;
      |       ^~~~~~~~~~~~~~~~
/Users/nickhardy/Documents/GitHub/Team1-Boujaoude-Deokar-Hijazi-Hardy/quest-1/code/main/solarcode2.c:591:7: warning: variable 'current_position_vertical' set but not used [-Wunused-but-set-variable]
  591 |   int current_position_vertical = 0;
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~
/Users/nickhardy/Documents/GitHub/Team1-Boujaoude-Deokar-Hijazi-Hardy/quest-1/code/main/solarcode2.c:589:7: warning: variable 'current_position_horizontal' set but not used [-Wunused-but-set-variable]
  589 |   int current_position_horizontal = 0;
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/nickhardy/Documents/GitHub/Team1-Boujaoude-Deokar-Hijazi-Hardy/quest-1/code/main/solarcode2.c:566:7: warning: unused variable 'step_1' [-Wunused-variable]
  566 |   int step_1 = 2;
      |       ^~~~~~
/Users/nickhardy/Documents/GitHub/Team1-Boujaoude-Deokar-Hijazi-Hardy/quest-1/code/main/solarcode2.c:564:7: warning: unused variable 'step' [-Wunused-variable]
  564 |   int step = 2;
      |       ^~~~
/Users/nickhardy/Documents/GitHub/Team1-Boujaoude-Deokar-Hijazi-Hardy/quest-1/code/main/solarcode2.c:441:27: warning: unused variable 'ele' [-Wunused-variable]
  441 |   example_queue_element_t ele;
      |                           ^~~
/Users/nickhardy/Documents/GitHub/Team1-Boujaoude-Deokar-Hijazi-Hardy/quest-1/code/main/solarcode2.c: In function 'start_timer':
/Users/nickhardy/Documents/GitHub/Team1-Boujaoude-Deokar-Hijazi-Hardy/quest-1/code/main/solarcode2.c:396:1: error: control reaches end of non-void function [-Werror=return-type]
  396 | }
      | ^
At top level:
/Users/nickhardy/Documents/GitHub/Team1-Boujaoude-Deokar-Hijazi-Hardy/quest-1/code/main/solarcode2.c:400:13: warning: 'test_alpha_display' defined but not used [-Wunused-function]
  400 | static void test_alpha_display()
      |             ^~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/solarcode2.c.obj] Error 1
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
